--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,14 @@ set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Option to enable debug features (instruction tracing, counting, etc.)
+option(GBEMU_DEBUG "Enable debug features (instruction tracing, counting)" OFF)
+
+if(GBEMU_DEBUG)
+    add_compile_definitions(GBEMU_DEBUG)
+    message(STATUS "GBEMU_DEBUG enabled - instruction tracing and counting active")
+endif()
+
 # Set output directories
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
